# XorEncoder

./: CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.hpp
src/file/: FileEncoder.cpp  FileEncoder.hpp  FileScanner.cpp  FileScanner.hpp
src/settings/: AppSettings.hpp
src/task/: Task.cpp  Task.hpp
